elasticsearch deleteAll, remove workaround for tests (#66)
Signed-off-by: Jon Harper <jon.harper87@gmail.com>